--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
+    "/js/back.js": "/js/back.js",
+    "/js/front.js": "/js/front.js",
     "/css/app.css": "/css/app.css"
 }
