--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,7 +4,5 @@
     "/css/app.css": "/css/app.css",
     "/notFound.js": "/notFound.js",
     "/restaurant.js": "/restaurant.js",
-    "/vendors~restaurant.js": "/vendors~restaurant.js",
-    "/homePage.js": "/homePage.js",
-    "/vendors~homePage~notFound~restaurant.js": "/vendors~homePage~notFound~restaurant.js"
+    "/vendors~restaurant.js": "/vendors~restaurant.js"
 }
